syntax = "proto3";
package realionetwork.asset.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "realionetwork/asset/v1/params.proto";
import "realionetwork/asset/v1/token.proto";

option go_package = "github.com/realiotech/realio-network/x/asset/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/realionetwork/asset/v1/params";
  }

  // Parameters queries the tokens of the module.
  rpc Tokens(QueryTokensRequest) returns (QueryTokensResponse) {
    option (google.api.http).get = "/realionetwork/asset/v1/tokens";
  }

  // Parameters queries the tokens of the module.
  rpc Token(QueryTokenRequest) returns (QueryTokenResponse) {
    option (google.api.http).get = "/realionetwork/asset/v1/tokens/{symbol}";
  }

  // Parameters queries the tokens of the module.
  rpc IsAuthorized(QueryIsAuthorizedRequest) returns (QueryIsAuthorizedResponse) {
    option (google.api.http).get = "/realionetwork/asset/v1/isauthorized/{symbol}/{address}";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [ (gogoproto.nullable) = false ];
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryTokensRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryTokensResponse {
  // params holds all the parameters of this module.
  repeated Token tokens = 1 [ (gogoproto.nullable) = false ];
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryTokenRequest {
  // symbol is the token symbol to query for.
  string symbol = 1;
}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryTokenResponse {
  // params holds all the parameters of this module.
  Token token = 1 [ (gogoproto.nullable) = false ];
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryIsAuthorizedRequest {
  // symbol is the token symbol to query for.
  string symbol = 1;
  string address = 2;
}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryIsAuthorizedResponse {
  // params holds all the parameters of this module.
  bool isAuthorized = 1;
}